--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,8 @@ body {
 #calculator {
   height: 50rem;
   width: 40rem;
-  padding: 24px 0;
-  border: 16px solid #555;
+  padding: 2rem 0;
+  border: 1rem solid #555;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -37,9 +37,9 @@ body {
 
 p {
   margin: 0;
-  padding: 12px 12px 0 0;
+  padding: 0.5rem 0.5rem 0 0;
   font-family: "Orbitron", sans-serif;
-  letter-spacing: 4px;
+  letter-spacing: 0.2rem;
 }
 
 .top {
@@ -53,47 +53,47 @@ p {
 }
 
 #button-container {
-  height: 625px;
-  width: 525px;
+  height: 45rem;
+  width: 35rem;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  padding-top: 24px;
+  padding-top: 2rem;
 }
 
 .row {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 500px;
+  width: 32rem;
 }
 
 .button {
-  height: 100px;
+  height: 6rem;
   background-color: #aaa;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 40px;
-  border-radius: 100px;
+  font-size: 2.5rem;
+  border-radius: 5rem;
   margin: 0;
 }
 
 .small {
-  width: 100px;
+  width: 6rem;
 }
 
 .long {
-  width: 235px;
+  width: 14.6rem;
 }
 
 .longer {
-  width: 370px;
+  width: 23.6rem;
 }
 
 .fa-circle {
-  font-size: 12px;
+  font-size: 1rem;
 }
 
 .button:hover {
